--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+
         <h1>Colors Palette for your interfaces</h1>
         <div class="main-container">
             <div class="header-container">
@@ -37,22 +38,30 @@
 
             <div class="article-container">
 
-                <div class="article-block">
-
+                <div class="article">
+                    <div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, adipisci aperiam! Quidem, cupiditate porro!</p>
                 </div>
 
-                <div class="article-block">
-                    
+                <div  class="article">
+                    <div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, adipisci aperiam! Quidem, cupiditate porro!</p>
                 </div>
 
-                <div class="article-block">
-                    
+                <div  class="article">
+                    <div >
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, adipisci aperiam! Quidem, cupiditate porro!</p>
                 </div>
 
             </div>
 
 
         </div>
+
+        <button>Generate!</button>
 
 
     </main>
