--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colors Palette</title>
+    <title>Color Palette Random</title>
     <link rel="stylesheet" href="./styles.css">
     
 
@@ -12,7 +12,7 @@
 <body>
     <main>
 
-        <h1>Colors Palette for your interfaces</h1>
+        <h1>Color Palette for your designs 🖌</h1>
         <div class="main-container">
             <div class="header-container">
 
@@ -20,7 +20,7 @@
 
                 </div>
 
-                <div id="center-blockJS" class="center-block">
+                <div class="center-block">
                     
                 </div>
 
@@ -64,7 +64,7 @@
         <button id="generateButton">Generate!</button>
 
         <footer>
-            <p>&copy; 2023 Frank Riano. Todos los derechos reservados.</p>
+            <p>&copy;2023 Frank Riaño. All rights reserved.</p>
         </footer>
     </main>
 
