--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
         <button id="generateButton">Generate!</button>
 
+        <div id="colorValues"></div>
+
         <footer>
             <p>&copy;2023 Frank Riaño. All rights reserved.</p>
         </footer>
