--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
         <h1>Color Palette for your designs 🖌</h1>
 
-        <p class="text">Our color palette generator unleashes the potential of the 60-30-10 rule. Create harmonious color schemes effortlessly, with 60% dominant, 30% supporting, and 10% accent colors. Elevate your designs and make a lasting impact. Try this generator now!</p>
+        <p class="text">Our color palette generator unleashes the potential of the <span>60-30-10 rule</span>. Create harmonious color schemes effortlessly, with 60% dominant, 30% supporting, and 10% accent colors. Elevate your designs and make a lasting impact.</p>
+        <p class="text2"><span>Try this generator now!</span></p>
         <div class="main-container">
             <div class="header-container">
 
